[package]
name = "thirdkind"
version = "3.0.3"
authors = ["Simon Penel <simon.penel@univ-lyon1.fr>"]
edition = "2018"
description ="Read  phylogenetic tree(s) in newick, phyloXML or recPhyloXML file and build a svg representation of the tree(s) allowing 1, 2 or 3 reconciliation levels."
license="CECILL-2.1"
keywords=["phylogeny", "recphyloxml", "tree-reconciliation", "svg", "bioinformatics"]
homepage = "https://github.com/simonpenel/thirdkind/wiki"
repository = "https://github.com/simonpenel/thirdkind"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4.14"
env_logger = "0.8.3"
getopt = "1.1.0"
webbrowser = "0.5.5"
light_phylogeny = "1.4.3"
